--- a/area de atuação.css
+++ b/area de atuação.css
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="styleshee" href="area de atuação index.html.css">
 </head>
 <body>
-    
+    background color
 </body>
 </html>
