--- a/area de atuação.css
+++ b/area de atuação.css
@@ -1,11 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    background color
-</body>
-</html>
+body{
+ background-color: rgb(231, 217, 237);
+ text-align: center;
+}
+h1 {
+    font-style: italic;
+    color: rgb(214, 59, 150);
+    font-size: larger;
+}
+h2 {
+    color: rgb(14, 229, 157);
+    font-weight:200;
+}
+
+.imagem {
+    width: 50%;
+}
+.imagem2 {
+ width: 40%;
+}
+.lista {
+    text-align: left;
+    color: rgba(137, 43, 226, 0.598);
+}
+.pizza {
+    color: darkmagenta;
+}
