--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
  background-color: rgb(86, 24, 202);
  text-align: center;
 }
-h1 {
+p {
     font-style: italic;
     color: rgb(214, 59, 150);
     font-size: larger;
