--- a/Funcionamento.css
+++ b/Funcionamento.css
@@ -1,9 +1,12 @@
-body{
- background-color: rgb(202, 110, 24);
- text-align: center;
+body {
+    background-color: rgb(202, 110, 24);
+    text-align: center;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
+
 h1 {
     font-style: italic;
     color: rgb(59, 204, 214);
-    font-size: larger;
+    font-size: 2em; /* melhor que "larger", pois é mais preciso */
 }
