--- a/style.css
+++ b/style.css
@@ -1,9 +1,45 @@
 body {
-  background-color: rgb(255, 162, 146);
+    background-color: #fdf6ec;
+    color: #333;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+}
+
+header {
+    background-color: #264653;
+    padding: 15px 0;
+}
+
+header nav ul {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+header a {
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 h1 {
-  font-style: italic;
-  color: rgb(214, 204, 59);
-  font-size: larger;
+    color: #2a9d8f;
+    font-style: italic;
+    font-size: 2.5em;
+    margin-bottom: 10px;
+}
+
+section {
+    margin-bottom: 30px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    margin: 5px 0;
 }
